{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 13,
  "lineage": "51f542a7-3db5-33d0-b379-0f9edde981c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cb5cf49019e79c51",
            "arn": "arn:aws:ec2:us-east-1:381492153020:instance/i-0b70c7b748e4d206c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0b70c7b748e4d206c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0515981a7187a7c89"
              }
            ],
            "primary_network_interface_id": "eni-0515981a7187a7c89",
            "private_dns": "ip-10-0-1-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-54-237-37-115.compute-1.amazonaws.com",
            "public_ip": "54.237.37.115",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03b8ceb9840483d20",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e6c3d720f58afe5",
            "tags": {
              "Name": "Frontend-Innovatech"
            },
            "tags_all": {
              "Name": "Frontend-Innovatech"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-036f2a4d4ea2b28fb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381492153020",
            "id": "i-0b70c7b748e4d206c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.sg_front",
            "aws_subnet.public_subnet",
            "aws_vpc.innovatech_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492153020:internet-gateway/igw-07f744909b4a3a5e0",
            "id": "igw-07f744909b4a3a5e0",
            "owner_id": "381492153020",
            "region": "us-east-1",
            "vpc_id": "vpc-0b40aec78c61d5383"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.innovatech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492153020:route-table/rtb-0aeb35ef1b7946691",
            "id": "rtb-0aeb35ef1b7946691",
            "owner_id": "381492153020",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f744909b4a3a5e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b40aec78c61d5383"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381492153020",
            "id": "rtb-0aeb35ef1b7946691",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.innovatech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f881a376400b2a4",
            "region": "us-east-1",
            "route_table_id": "rtb-0aeb35ef1b7946691",
            "subnet_id": "subnet-07e6c3d720f58afe5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.innovatech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492153020:security-group/sg-036f2a4d4ea2b28fb",
            "description": "Permite HTTP y SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036f2a4d4ea2b28fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_Frontend",
            "name_prefix": "",
            "owner_id": "381492153020",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b40aec78c61d5383"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381492153020",
            "id": "sg-036f2a4d4ea2b28fb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.innovatech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492153020:subnet/subnet-07e6c3d720f58afe5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e6c3d720f58afe5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492153020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Subred-Publica-Front"
            },
            "tags_all": {
              "Name": "Subred-Publica-Front"
            },
            "vpc_id": "vpc-0b40aec78c61d5383"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381492153020",
            "id": "subnet-07e6c3d720f58afe5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.innovatech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "innovatech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492153020:vpc/vpc-0b40aec78c61d5383",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09dd2ceeee2886de1",
            "default_route_table_id": "rtb-00777fa0ba4dc5177",
            "default_security_group_id": "sg-0d4b2bb25f338594d",
            "dhcp_options_id": "dopt-045a24e1dab6d919c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b40aec78c61d5383",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00777fa0ba4dc5177",
            "owner_id": "381492153020",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC-Innovatech"
            },
            "tags_all": {
              "Name": "VPC-Innovatech"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "381492153020",
            "id": "vpc-0b40aec78c61d5383",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}